VA-4.Added Example data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.jpa.hibernate.ddk-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/voteapp?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring..hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+spring.messages.basename=validation
