--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/voteapp?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/voteApp?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring..hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql=true
 
 spring.messages.basename=validation
